Readme file is ready

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
-MONGODB_URI=mongodb://localhost:27017/energy-monitor
+MONGODB_URI=mongodb+srv://rohithadiga19:UwVeiJ4wdqagk4bu@cluster0.h1vww.mongodb.net/energy-monitor
 JWT_SECRET=your_jwt_secret_key
 PORT=5001
 GEMINI_API_KEY=AIzaSyAFR1j4Coi7tZOKnssjs3gFcexTXx9xuMw
+MONGODB_URI2=mongodb://localhost:27017/energy-monitor
